# feiertage

./: .gitignore  Cargo.toml  README.md  feiertage.ical  rust-toolchain.toml
.github/workflows/: ci.yml  create-pr.yml  deploy.yml
input/: HE.csv  NRW.csv
output/: .gitignore  feiertage.ical
scripts/: append-year.py
src/: main.rs
